2010-05-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Move forward with the new code transformation framework.

	* tools/lib/slc/ast.py: Introduce nodes for C types, typedefs and
	typedef uses.

	* tools/lib/slc/visitors.py: Introduce default visits for the new
	nodes.

	* tools/lib/slc/lower/lowccast.py,
	* tools/lib/slc/lower/lowcvars.py,
	* tools/lib/slc/lower/rename.py: Adapt to use the new type nodes.

	* tools/lib/slc/lower/seq.py,
	* tools/lib/slc/mtalpha/visitors.py: Use the new type nodes for
	the function pointers and memargs structure. Adapt function
	parameter declarations.

	* tools/lib/slc/lower/lowercreate.py: Emit line number before
	assignment of exit code.

2010-05-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>
	
	Move forward with the new code transformation framework.

	Framework usability improvements:

	* tools/lib/slc/ast.py (Item): Implement `+' for items to simplify
	block composition.

	* tools/lib/slc/ast.py (Block): Allow to instanciate with only one
	item. Convert plain strings to opaques.

	* tools/bin/spr: Move specification of stages to a data
	structure. Output intermediate results to files.

	New features:

	* tools/lib/slc/ast.py: Introduce nodes for C variable
	declarations and uses; C labels and gotos; cast expressions, and
	subscript operations.

	* tools/lib/slc/visitors.py: Introduce default visits for the new
	nodes. New `ScopedVisitor'.

	* tools/bin/spr (Dispatcher),
	* tools/lib/slc/visitors.py (BaseVisitor): Merge state of split
	visitors (alias `__dict__' between dispatcher and alternates).

	* tools/lib/lower/rename.py,
	* tools/lib/lower/lowccast.py,
	* tools/lib/lower/lowclabels.py,
	* tools/lib/lower/lowcvars.py,
	* tools/lib/lower/remflavors.py: New stages. 

	Changes:

	* tools/bin/spr: Use the new stages.

	* tools/lib/input/check.py: Ensure `break' and `end_thread' do not
	appear within create/sync. Keep track of relation between `create'
	and scopes.

	* tools/lib/slc/ast.py: Simplify `LowCreate'. Remove