@@ -5,6 +5,7 @@ import sys
 import subprocess
 import os
 import re
+from slc.input.cm4 import CM4
 
 m4 = os.getenv("M4", "@M4@")
 m4_args = []
@@ -12,10 +13,12 @@ m4_lquote = '`'
 m4_rquote = "'"
 m4_file = "__file__"
 m4_line = "__line__"
+m4_trace = None
 verbose = False
 dump_trans = None
 output_file = '-'
 input_files = []
+synclines = True
 
 def die(msg):
     print >>sys.stderr, "%s: %s" % (sys.argv[0], msg)
@@ -31,18 +34,20 @@ def parse_args(args):
     Command-line argument parsing:
 
     -o FILE             Output to FILE (default: -)
+    -P                  Remove synclines.
     -v                  Be verbose
     -fcm4-lquote=S      Set opening M4 quote (default: `)
     -fcm4-rquote=S      Set closing M4 quote (default: ')
     -fcm4-file=S        Set M4 macro name for setting current file name (default __file__)
     -fcm4-line=S        Set M4 macro name for setting current line number (default __line__)
+    -fcm4-trace=FILE    Capture M4 trace to FILE (default: don't capture)
     -fcm4-dump=FILE     Capture filtered input to FILE (default: don't capture)
     -Wm4,OPTION         Add OPTION to M4 command-line
 
     Other command-line arguments are read as input files.
     """
-    global m4_args, m4_lquote, m4_rquote, m4_file, m4_line
-    global verbose, output_file, input_files, dump_trans
+    global m4_args, m4_lquote, m4_rquote, m4_file, m4_line, m4_trace
+    global verbose, output_file, input_files, dump_trans, synclines
 
     ret = []
     l = len(args)
@@ -51,9 +56,11 @@ def parse_args(args):
         arg = args[i]
         if arg == '-v':   verbose = True
         elif arg == '-o': output_file = args[i + 1]; i = i + 2; continue       
+        elif arg == '-P': synclines = False
         elif arg.startswith('-fcm4-lquote='):  m4_lquote = arg.split('=',1)[1]
         elif arg.startswith('-fcm4-rquote='):  m4_rquote = arg.split('=',1)[1]
         elif arg.startswith('-fcm4-file='):    m4_file = arg.split('=',1)[1]
+        elif arg.startswith('-fcm4-trace='):   m4_trace = arg.split('=',1)[1]
         elif arg.startswith('-fcm4-line='):    m4_line = arg.split('=',1)[1]
         elif arg.startswith('-fcm4-dump='):    dump_trans = arg.split('=',1)[1]
         elif arg.startswith('-Wm4,'):          m4_args += arg.split(',')[1:]
@@ -76,171 +83,40 @@ def parse_args(args):
         log("m4_line = %s" % repr(m4_line))
     return ret
 
-# regex for C comments: 
-re_com = r'/[*].*?[*]/|//.*?(?=\n)'
-# regex for C braces:
-re_br = r'(?P<braces>[{}])'
-# regex for C strings:
-re_str = r'''(?P<str>"(?:[^\\"]|\\.)*"|['](?:[^\\']|\\.)*['])'''
-# regex for whitespace
-re_ws = r'(?P<ws>\s+)'
-# regex for line directives
-re_line = r'#(?:[ \t]*line|)[ \t]+(?P<line>[0-9]+)[ \t]+"(?P<file>.*?)".*?(?=\n)'
-# regex for id
-re_id = r'(?P<id>[a-zA-Z_][$a-zA-Z0-9_]*)' 
-re_all = r'%s|%s|%s|%s|%s|(?P<rest>\(|[^{}\(\'\"\#a-zA-Z_]+|.)' % (re_br, re_str, re_ws, re_line, re_id)
 
-acc_nl = None
-def com_repl(matchobj):
-    global acc_nl
-    nl = matchobj.group('nl')
-    if nl is not None:
-        data = '\n' * (acc_nl + len(nl))
-        acc_nl = 0
-        return data
-    com = matchobj.group('com')
-    if com is not None:
-        acc_nl += com.count('\n')
-        return ' '
-    return matchobj.group(0)
-
-def do_comments(data):
-    global acc_nl
-    res = '%s|(?P<com>%s)|(?P<nl>\n+)' % (re_str,re_com)
-    rec = re.compile(res, re.S|re.M)
-    acc_nl = 0
-    data = re.sub(rec, com_repl, data)
-    data += '\n' * acc_nl
-    return data
-
-repl_line = None
-acc_ws = None
-
-last_seen = None
-def wrepl(matchobj):
-    global acc_ws, last_seen, m4_lquote, m4_rquote
-
-    if matchobj.group('line') is not None:
-        # log("LINE")
-        lineno = matchobj.group('line')
-        filename = matchobj.group('file')
-        acc_ws += '\n' * matchobj.group(0).count('\n') + repl_line % (filename, int(lineno)-1)
-        return ""
-
-    ws = matchobj.group('ws')
-    if ws is not None:
-        # log("WS: %r" % ws)
-        acc_ws += ws
-        return ""
-
-    id = matchobj.group('id')
-    if id is not None:
-        # log("ID: %r" % id)
-        last_seen = 'id'
-        data = acc_ws + id
-        acc_ws = ''
-        return data
-
-    str = matchobj.group('str')
-    if str is not None:
-        # log("STR: %r" % str);
-        last_seen = 'rest'
-        data = acc_ws + '%s%s%s' % (m4_lquote, quotes_escaper(str), m4_rquote)
-        acc_ws = ''
-        return data
-
-    br = matchobj.group('braces')
-    if br is not None:
-        last_seen = 'rest'
-        if br == '{': name = 'sl_lbr'
-        else: name = 'sl_rbr'
-        
-        data = acc_ws + '[[]]%s[[]]' % name
-        acc_ws = ''
-        return data
-
-    rest = matchobj.group(0)
-    # log("REST: %r" % rest)
-    prefix = ''
-    if not (last_seen == 'id' and rest.startswith('(')):
-        prefix += acc_ws
-        acc_ws = ''
-    last_seen = 'rest'
-    return prefix + rest
-
-def makeqesc(specialchars):
-    specials = ''.join(specialchars)
-    def escaper(str):
-        if str[0] == '"':
-            d = '""'
-        else: 
-            d = ''
-        newstr = ''
-        for c in str:
-            if c in specials:
-                newstr += r'\x%2x%s' % (ord(c),d)
-            else:
-                newstr += c;
-        # print >>sys.stderr, "HELLO", newstr
-        return newstr
-    return escaper
-
-def m4_massage_input(data):
-    global acc_ws, repl_line, quotes_escaper
-    # replacement for quote chars in strings
-    quotes_escaper = makeqesc(list(set(m4_lquote + m4_rquote)))
-    # replacement for line
-    repl_line = r'%s(%s%%s%s)%s(%%d)' % (m4_file, m4_lquote, m4_rquote, m4_line)
-
-    rec = re.compile(re_all, re.S|re.M)
-    acc_ws = ''
-    data = re.sub(rec, wrepl, data)
-    data += acc_ws
-    return data
-
-def do_m4(data):
-    m4_cmdline = [m4] + m4_args + ['-']
-    log("exec m4: %s" % repr(m4_cmdline))
-    if output_file is not None and output_file != '-':
-        m4out = file(output_file, 'w')
-    else: 
-        m4out = sys.stdout
-
-    m4p = subprocess.Popen(m4_cmdline, stdin=subprocess.PIPE, stdout=m4out)
-    _ = m4p.communicate(input = data)
-    if m4p.returncode != 0: sys.exit(m4p.returncode)
-
-def maybe_capture(cond, name, data):
+def maybe_capture(cond, name, ext, data):
     if cond is not None:
         log("writing %s to %s" % (name, cond))
         if cond == '-':
             outfile = sys.stdout
         else:
-            outfile = file(cond, 'w')
+            outfile = file(cond + '.' + ext, 'w')
         outfile.write(data)
         if cond != '-': outfile.close()
 
-def do_combine():
-    data = ''
-    for fname in input_files:
-        if fname == '-': 
-            title = '<stdin>'
-            f = sys.stdin
-        else: 
-            title = fname
-            f = file(fname)
-        data += '\n# 1 "%s"\n' % title
-        data += f.read()
-        if fname != '-': f.close()
-        
-    data = do_comments(data)
-    data = m4_massage_input(data)
-    maybe_capture(dump_trans, "massaged source", data)
-    do_m4(data)
+def do_combine(cm4):
+    data = cm4.combine(input_files)
+    maybe_capture(dump_trans, "combined input", "mi", data)
+    data = cm4.remove_comments(data)
+    maybe_capture(dump_trans, "removed comments", "mc", data)
+    data = cm4.massage(data)
+    maybe_capture(dump_trans, "massaged source", "ms", data)
+    data = cm4.do_m4(data, m4_args, m4_trace)
+    print data
 
 if __name__ == "__main__":
     parse_args(sys.argv[1:])
+    cm4 = CM4(m4_lquote = m4_lquote,
+              m4_rquote = m4_rquote,
+              m4_file = m4_file,
+              m4_line = m4_line,
+              sl_lbr = '{', sl_rbr = '}',
+              m4 = m4,
+              verbose = verbose,
+              synclines = synclines)
+              
+
     if not input_files:
         die("no input files");
-    do_combine()
+    do_combine(cm4)
 
